# AutoNVIS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DASHBOARD_README.md  DEPLOYMENT.md  DEVELOPMENT.md  GNSS_TEC_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  IONORT.md  NATIVE_RAYTRACER_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHARLAP_STATUS.md  PROPAGATION_INTEGRATION_SUMMARY.md  RAY_TRACER_BUILD_STATUS.md  RAY_TRACING_OPTIONS.md  README.md  demo_autonomous_system.py  demo_standalone.py  docker-compose.dashboard.yml  docker-compose.yml  pytest.ini  requirements.txt  run_AutoNVIS_propagation.sh  run_AutoNVIS_raytracer.sh  run_AutoNVIS_spaceweather.sh  run_AutoNVIS_tec_display.sh  run_brutal_tests.py  run_ionort_demo.sh  run_solar_imaging.sh
.github/workflows/: ci.yml
config/: local.yml  production.yml
docker/: Dockerfile.dashboard  Dockerfile.nvis  docker-compose.yml  nginx.conf  prometheus.yml
docker/assimilation/: Dockerfile
docker/grafana/dashboards/: nvis_dashboard.json
docker/ingestion/: Dockerfile
docker/output/: Dockerfile
docker/supervisor/: Dockerfile
docs/: DASHBOARD_DEPLOYMENT.md  DASHBOARD_USER_GUIDE.md  DEPLOYMENT_COMPLETE.md  FINAL_IMPLEMENTATION_SUMMARY.md  GNSS_TEC_IMPLEMENTATION.md  GRID_SUBSCRIPTION_QUICKSTART.md  Installation.md  MESSAGE_QUEUE_GRID_SUBSCRIPTION.md  NVIS_COMPLETE_SYSTEM_SUMMARY.md  NVIS_PHASE1_SUMMARY.md  NVIS_PHASE2_SUMMARY.md  NVIS_PHASE4_SUMMARY.md  NVIS_PHASE5_SUMMARY.md  NVIS_PHASE6_SUMMARY.md  PHARLAP_INSTALLATION.md  PHARLAP_INTEGRATION_ROADMAP.md  RABBITMQ_SETUP.md  TEST_SUITE.md  TheoreticalUnderpinnings.md  USER_GUIDE.md  Usage.md  implementation_progress_summary.md  phase1_validation_report.md  python_cpp_integration.md  system_integration_complete.md
docs/channel_model/: CHANNEL_MODEL_REPORT.md
scripts/: backup.sh  deploy.sh  health_check.sh  ionort_live_demo.py  ionort_simple.py
src/analysis/: __init__.py  information_gain_analyzer.py  network_analyzer.py  optimal_placement.py
src/assimilation/: CMakeLists.txt  main.cpp
src/assimilation/bindings/: CMakeLists.txt  python_bindings.cpp
src/assimilation/include/: cholesky_update.hpp  nvis_observation_model.hpp  observation_model.hpp  physics_model.hpp  sigma_points.hpp  sr_ukf.hpp  state_vector.hpp
src/assimilation/models/: chapman_layer.py  gauss_markov.cpp
src/assimilation/python/: autonvis_filter.py  checkpoint_manager.py  rts_smoother.py  test_basic_integration.py  test_integration.py
src/assimilation/src/: cholesky_update.cpp  nvis_observation_model.cpp  observation_model.cpp  sigma_points.cpp  sr_ukf.cpp  state_vector.cpp
src/assimilation/tests/: demo_localization.cpp  test_cholesky.cpp  test_nvis_model.cpp  test_sigma_points.cpp  test_sr_ukf.cpp  test_sr_ukf_brutal.cpp  test_state_vector.cpp  validation_phase1.cpp
src/channel_models/: __init__.py  base.py  ray_channel_mapper.py  vogler_hoffmeyer.py
src/channel_models/hifi/: __init__.py  agc.py  cfo_tracker.py  channel_presets.json  crc.py  dispersion.py  feature_config.py  interleaver.py  ldpc.py  modulator.py  receiver.py  scrambler.py  streaming_receiver.py  sync.py  system.py  transmitter.py  turbo_equalizer.py  utils.py  vogler_hoffmeyer_channel.py
src/common/: __init__.py  config.py  constants.py  geodesy.py  logging_config.py  message_queue.py
src/ingestion/: __init__.py  giro_client.py  live_iono_client.py  main.py
src/ingestion/common/: __init__.py  data_validator.py
src/ingestion/gnss/: __init__.py  gnss_tec_client.py  ntrip_client.py  rtcm3_parser.py  tec_calculator.py
src/ingestion/nvis/: __init__.py  adaptive_aggregator.py  nvis_sounder_client.py  quality_assessor.py
src/ingestion/nvis/protocol_adapters/: __init__.py  base_adapter.py  email_adapter.py  http_adapter.py  mqtt_adapter.py  tcp_adapter.py
src/ingestion/space_weather/: __init__.py  ace_solar_wind.py  glotec_client.py  goes_xray_client.py
src/output/dashboard/: __init__.py  main.py  nvis_analytics_api.py
src/output/dashboard/backend/: __init__.py  control_api.py  data_processing.py  (+8 more)
src/propagation/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  demo_raytracer.py  test_grid_publisher.py  test_grid_subscription.py  test_integration.py  test_nvis_coverage.py  test_performance.py
src/propagation/bindings/: python_bindings.cpp
src/propagation/include/: ray_tracer_3d.hpp  ray_tracer_cuda.hpp
src/propagation/products/: luf_muf_calculator.py
src/propagation/python/: __init__.py  pharlap_replacement.py
src/propagation/services/: __init__.py  propagation_service.py
src/propagation/src/: ray_tracer_3d.cpp  ray_tracer_cuda.cu  ray_tracer_cuda_wrapper.cpp
src/raytracer/: __init__.py  display.py  electron_density.py  haselgrove.py  homing_algorithm.py  iri_correction.py  link_budget.py  nvis_optimizer.py  pharlap_interface.py
src/raytracer/integrators/: __init__.py  adams_bashforth.py  base.py  factory.py  rk4.py  rk45.py
src/supervisor/: __init__.py  alert_generator.py  filter_orchestrator.py  grid_subscriber.py  health_monitor.py  main.py  mode_controller.py  nvis_filter_integration.py  system_orchestrator.py
src/visualization/: __init__.py
src/visualization/pyqt/: __init__.py  main.py  main_direct.py  main_window.py
tests/: conftest.py
tests/dashboard/: test_integration.py
tests/ingestion/: test_giro_client.py
tests/integration/: test_brutal_system_integration.py  test_dashboard_api.py  test_nvis_end_to_end.py  test_nvis_performance.py  test_nvis_validation.py
tests/unit/: test_ace_solar_wind.py  test_alert_generator.py  test_checkpoint_manager.py  test_config.py  test_data_validator.py  test_geodesy.py  test_glotec_client.py  test_gnss_tec.py  test_goes_xray.py  test_homing_algorithm.py  test_information_gain.py  test_integrators.py  test_message_queue.py  test_mode_controller.py  test_nvis_aggregation.py  test_nvis_quality.py  test_optimal_placement.py  test_propagation_service.py  test_rts_smoother.py  test_state_vector.py  test_tec_observation_model.py
tests/validation/: __init__.py  event_replayer.py  test_validation_framework.py  validation_metrics.py
(+76 files in other folders)
